[tool.poetry]
name = "registry"
version = "0.1.0"
description = ""
authors = ["nazariyv <nazariy@inbox.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
eth-brownie = "1.17.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
